--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
+.main {
+  background: rgb(255, 218, 87);
+  height: 100vh
+}
+.button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  border: 2px solid #000;
+  border-radius: 3px;
+  color: #fff;
+  background: #000;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 12px 20px;
+  text-align:center;
+  transition-duration: .15s;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+}
+.button:hover {
+  color: #000;
+  background: rgb(255, 218, 87);
+}
+
 .App {
   text-align: center;
 }
