--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   cursor: pointer;
   border: 2px solid #000;
   border-radius: 3px;
-  color: #fff;
+  color: rgb(255, 218, 87);
   background: #000;
   font-size: 20px;
   font-weight: 600;
